--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,7 +20,7 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 142px;
+  height: 100px;
   background-color: var(--very--light-grey);
   align-items: center;
 }
@@ -32,4 +32,9 @@ body {
 
 .footer-content li  {
   list-style: none;
+}
+
+.footer-content p {
+  font-size: var(--sm);
+  justify-self: center;
 }
